Remove 'preset/custom'-selection, parameters are always visible #12 + fixed parameter binding #10

--- a/tsspredatorui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/tsspredatorui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -65,8 +65,8 @@
   }
 
   .layout-with-border{
-    border-radius: 10px;
-    background-color: lightblue;
+    //border-radius: 10px;
+    //background-color: lightblue;
 
 
   }
